@@ -43,7 +43,7 @@ typedef struct _shoes_app {
     VALUE nesting;
     VALUE extras;
     VALUE styles;
-    VALUE groups;
+    VALUE groups;     // #391 radao groups belong to App not canvas/slot
     ID cursor;
     VALUE title;
     VALUE location;
