@@ -13,12 +13,27 @@ SHOES_CONTROL_REF shoes_native_radio(VALUE self, shoes_canvas *canvas, shoes_pla
     
     if (!NIL_P(group)) {
         shoes_control *lctrl;
+        if (TYPE(group) != T_ARRAY)
+          printf("Not a an array\n");
         VALUE leader = rb_ary_entry(group, 0);
+        if (NIL_P(leader))
+          printf("No control in group hash");
         Data_Get_Struct(leader, shoes_control, lctrl);
+#if 1
+        GtkWidget *first = (GtkWidget *)lctrl->ref;
+        ref = gtk_radio_button_new(NULL);
+        gtk_radio_button_join_group(ref, first);
+#else
+        ref = gtk_radio_button_new(NULL);
+        
         list = gtk_radio_button_get_group(GTK_RADIO_BUTTON(lctrl->ref));
+        if (list == NULL) 
+          printf("group len: %d\n", g_slist_length(list));
+#endif
+    } else {
+      // no group from shoes 
+      ref = gtk_radio_button_new(list);
     }
-
-    ref = gtk_radio_button_new(list);
 
     if (!NIL_P(shoes_hash_get(attr, rb_intern("tooltip")))) {
         gtk_widget_set_tooltip_text(GTK_WIDGET(ref), RSTRING_PTR(shoes_hash_get(attr, rb_intern("tooltip"))));
